# scolta-php

./: .editorconfig  .gitattributes  .gitignore  .php-cs-fixer.cache  .php-cs-fixer.dist.php  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  HOSTING.md  LICENSE  README.md  UPGRADE.md  UPGRADING-PAGEFIND.md  composer.json  package-lock.json  package.json  phpstan-baseline.neon  phpstan.neon  phpunit.xml  playwright.config.js
.github/: PULL_REQUEST_TEMPLATE.md
assets/: ASSETS.sha256
docs/: BENCHMARKS-LATEST.md  BENCHMARKS.md  CONFIG_REFERENCE.md  ENRICHMENT.md  LANGUAGE_PARITY.md  TUNING.md
js/: scolta.js
scripts/: benchmark.php  build-test-corpus.php  check-version-sync.php  check-version-sync.sh  fetch-wikipedia-corpus.php  generate-benchmarks-md.php  generate-concordance-fixtures-ml.sh  generate-concordance-fixtures-wiki-extended.sh  generate-concordance-fixtures-wiki.sh  generate-concordance-fixtures.sh  generate-stemmers.sh  smoke-test.php  validate-dist-archive.sh  validate-release.php  wikipedia-seed-articles-extended.json  wikipedia-seed-articles.json
src/: AiClient.php  ExtismCheck.php  SetupCheck.php
templates/: search.html
tests/: AiClientTest.php  AssetManifestTest.php  ContentExporterTest.php  DefaultPromptsTest.php  DefaultScorerTest.php  DtoTest.php  ExtismCheckTest.php  HygieneTest.php  PagefindBinaryTest.php  ScoltaConfigTest.php  SetupCheckTest.php  StructuralIntegrityTest.php  WasmIntegrationTest.php  demo-regression.sh
tests/js/: setup.js  (+20 more)
tools/stemmer-golden/: Cargo.toml  README.md
tools/stemmer-golden/src/: main.rs
wasm/: scolta_core.wasm
(+1020 files in other folders)
